bad-pod-2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-2
spec:
  containers:
  - name: nginx
    image: nginx:1.21
