problematic-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: problematic-pod
spec:
  securityContext:
    runAsNonRoot: true
    runAsUser: 0
  containers:
  - name: problem-container
    image: nginx:1.21
    securityContext:
      readOnlyRootFilesystem: true
