block-root-user-constraint-updated.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredSecurityContext
metadata:
  name: must-run-as-nonroot
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces: ["kube-system", "gatekeeper-system", "kube-public", "kube-node-lease"]
    labelSelector:
      matchExpressions:
      - key: "security-policy"
        operator: NotIn
        values: ["exempt"]
